Rename whitelist config and gate packet capture